welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:5: error: not found: type i
    if ( lookingFor== nums[i] ) {
                           ^occurrences:5: error: value nums of type Array[Int] does not take type parameters.
    if ( lookingFor== nums[i] ) {
                          ^